@@ -20,6 +20,7 @@ class Event(object):
         self.caption = caption
         self.start = start
         self.end = end
+        self.editable = kwargs.get('editable', True)
         self.all_day = kwargs.get('all_day', False)
         self.text_color = kwargs.get('text_color', None)
         self.bg_color = kwargs.get('bg_color', 'orangered')
