@@ -1,3 +1,4 @@
+* Manage non editable event
 * Add support for Python 3.8
 * Replace font-desc properties by font
 
